# paketbote

./: .gitignore  Cargo.toml  README.md  paketbote-check-aur-versions.service  paketbote-check-aur-versions.timer  paketbote-sync-pacman-dbs.service  paketbote-web.service  paketbote-worker-check-deps.service  paketbote-worker-repo-action.service  paketbote-worker.service
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-05-31-080139_job_queue/: down.sql  up.sql
migrations/2020-05-31-080152_missing_deps/: down.sql  up.sql
migrations/2020-06-05-165909_aur_version/: down.sql  up.sql
public/: colors-dark.css  delete-button.js  icons.css  style.css
src/: alpm.rs  aur.rs  error.rs  jobs.rs  lib.rs  main.rs  missing.rs  obsolete.rs  pkginfo.rs  spec.rs
src/db/: account.rs  aur_version.rs  jobs.rs  missing_deps.rs  mod.rs  models.rs  package.rs  package_depends.rs  package_provides.rs  repo.rs  repo_action.rs  repo_add.rs  schema.rs  token.rs
src/web/: boundary.rs  ctx_base.rs  db.rs  mod.rs  models.rs  principal.rs  props.rs  (+1 more)
systemd/: ctl.sh  paketbote-check-aur-versions.service  paketbote-sync-pacman-dbs.service  paketbote-sync-pacman-dbs.timer  paketbote-web.service  paketbote-worker-check-deps.service  paketbote-worker-repo-action.service  system-paketbote.slice  sysusers.conf  tmpfiles.conf
templates/: access-token-created.html.tera  access-tokens.html.tera  account.html.tera  base.html.tera  create-account.html.tera  home.html.tera  login.html.tera  macros.html.tera  repo.html.tera  search-results.html.tera  search.html.tera
(+26 files in other folders)
